# cutie-settings-daemon

./: CMakeLists.txt  connman.cpp  connman.h  connman.xml  cutie-settings-daemon.pro  cutie-settings-daemon.service  main.cpp  ofono.cpp  ofono.h  ofono_modem.cpp  ofono_modem.h  ofono_modem.xml  org.cutie_shell.SettingsDaemon.conf  structures.h
data/: cutie-settings-daemon.service
debian/: control  cutie-settings-daemon.install  rules
src/: atmosphere.h  atmosphere.xml  backlight.h  backlight.xml  main.cpp  modem.xml  modems.xml  networkbackend.xml  networkdevice.xml  networking.xml  networkservice.xml
src/modem/: modems.cpp  modems.h  ofono.xml  ofono_modem.cpp  ofono_modem.h
src/network/: connman.cpp  connman.h  networkbackend.cpp  networkbackend.h  networkconnection.cpp  networkconnection.h  networkdevice.cpp  networkdevice.h  networking.cpp  networking.h  networkmanager.cpp  networkmanager.h  networks.cpp  networks.h  nmaccesspoint.cpp  nmaccesspoint.h  nmwlandevice.cpp  nmwlandevice.h
